--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First Github Repo</title>
 </head>
 <body>
-    
+    <h1>I can push to Github now</h1>
+    <h1>This is the second commit for this Repo</h1>
 </body>
 </html>
