--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>I can push to Github now</h1>
     <h1>This is the second commit for this Repo</h1>
+    <h2>New code changed</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatem sequi ut praesentium mollitia, repudiandae error aut necessitatibus amet nesciunt repellat laborum fuga fugit dolorem! Delectus quam quos illum molestiae.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam corporis rerum, dignissimos consequatur deleniti laudantium nam vero quaerat fugiat sed quibusdam minima ut esse quod quae vitae facilis perspiciatis delectus.</p>
 </body>
 </html>
