--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatem sequi ut praesentium mollitia, repudiandae error aut necessitatibus amet nesciunt repellat laborum fuga fugit dolorem! Delectus quam quos illum molestiae.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam corporis rerum, dignissimos consequatur deleniti laudantium nam vero quaerat fugiat sed quibusdam minima ut esse quod quae vitae facilis perspiciatis delectus.</p>
     <img src="images/CasioCA-53W-1ZWatch_1_2000x.png" alt="casio ana digi watch" width="128" height="128">
+    <img src="RhEan8m.jpeg" alt="A cat"width="256" height="256">
 </body>
 </html>
